# aoc2024

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs
