[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["cargo", "derive"] }
itertools = "0.13.0"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking", "cookies"] }
